# gopt

./: .gitignore  README.md  SETUP.md  prepare_data.sh  pyproject.toml  startup.sh  upload_data.sh
data/go/: bpe_model.json  example_compiled_dataset.pt  example_train_bpe_tokens.txt  example_val_bpe_tokens.txt
examples/go/parser/: parser.go
manifests/: go_repos.txt  go_repos_licensed.tsv
prompts/: go.txt  go_1024x24.txt  go_thin.txt
src/gopt/: __init__.py  __main__.py  cli.py  data.py  go_bpe.py  go_corpus.py  go_eval.py  go_repos.py  go_tokenize.py  model.py  runtime.py
src/gpt/: __init__.py  __main__.py  cli.py  config.py  go_bpe.py  go_corpus.py  go_eval.py  go_repos.py  go_tokenize.py  runtime.py
tools/: discover_go_repos.py  extract_go_units.py  filter_repo_manifest_by_license.py  thin_go_corpus.py
tools/go_tokenize/: main.go
