[project]
name = "gopt"
version = "0.1.0"
description = "A tiny Go code model project: build corpus, train, sample, and evaluate."
readme = "README.md"
authors = [
    { name = "Lyle Dean", email = "dean@lyle.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "tokenizers>=0.20",
    "torch>=2.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
]

[project.scripts]
gopt = "gopt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
